--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand fs-2" href="#"> <img src="./assets/bobine.png" alt="logo"> CinéFilm</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+    <div class="collapse navbar-collapse d-flex justify-content-evenly" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+        <li class="nav-item fw-bolder">
           <a class="nav-link active" aria-current="page" href="#">Actualité</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item fw-bolder text-dark">
           <a class="nav-link" href="#">Menu</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item fw-bolder">
             <a class="nav-link" href="#">Offres</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item fw-bolder">
             <a class="nav-link" href="#">Films</a>
         </li>
        
@@ -47,7 +47,7 @@
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-light" type="submit">Search</button>
       </form>
     </div>
   </div>
