ajout image festival cannes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
       <div class="collapse navbar-collapse justify-content-around border border-dark p-1" id="navbarSupportedContent">
 
         <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Actualités</a>
-        <a class="nav-link fw-bold text-light" href="#">Menu</a>
         <a class="nav-link fw-bold text-light" href="#">Offres</a>
         <a class="nav-link fw-bold text-light" href="#">Films</a>
         <form class="d-flex">
@@ -51,36 +50,33 @@
       </div>
     </div>
   </nav>
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <h2 class="text-center">ACTUALITÉS</h2>
+      <div class="col-lg-3">
+        <div class="card">
+          <div class="card-body">
+            <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top"
+              alt="Affiche-Cannes">
+            <h5 class="card-title">Printemps du Cinéma</h5>
+            <p class="card-text">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-   <p class="m-5"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
- 
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
 
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque vel quis ratione veniam eos corporis beatae velit
-  exercitationem eius labore tempore atque perspiciatis amet necessitatibus sequi debitis, maiores dolores totam!
- </p>
-
-<!-- @@@-------------------------------------NEWSLETTER---------------------------------
+  <!-- @@@-------------------------------------NEWSLETTER---------------------------------
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- -->
 
-  <div class="container-fluid p-4 bg-success">
+  <div class="container-fluid p-4 bg-primary">
     <div class="row justify-content-center">
       <div class="col-lg-4">
         <h2 class="text-light text-center">NEWSLETTER</h2>
         <form class="d-flex">
+          
           <input class="form-control m-2 ps-2" type="mail" placeholder="E-mail" aria-label="Search">
           <button class="btn btn-outline-light m-2" type="submit">Envoyer</button>
         </form>
@@ -88,9 +84,36 @@
     </div>
   </div>
 
+  <div class="container-fluid">
+    <div class="row border border-dark justify-content-evenly">
+      <div class="col-lg-3">
+        <div class="card">
+          <div class="card-body text-center">
+            <img src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
+            <h5 class="card-title">Printemps du Cinéma</h5>
+            <p class="card-text">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="card">
+          <div class="card-body text-center">
+            <img src="assets/img/cinéchèque.jpg" class="card-img-top size" alt="cinéchèque">
+            <h5 class="card-title">Cinéchèque</h5>
+            <p class="card-text">Grâce au Cinéchèque, votre place valable dans tous les cinémas de France est à 8,50€
+              seulement.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+  </div>
+
 
   <footer>
-    <div class="container-fluid bg-secondary">
+    <div class="container-fluid bg-dark">
       <div class="row border-dark">
         <div class="col-lg-6 d-flex justify-content-evenly">
           <span class="text-light "><u>Nous Contacter</u></span>
