--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       </button>
       <div class="collapse navbar-collapse justify-content-around border border-dark p-1" id="navbarSupportedContent">
 
-        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Actualités</a>
-        <a class="nav-link fw-bold text-light" href="#">Offres</a>
-        <a class="nav-link fw-bold text-light" href="#">Films</a>
+        <a class="nav-link active text-light fw-bold" aria-current="page" href="#actualité">Actualités</a>
+        <a class="nav-link fw-bold text-light" href="#offres">Offres</a>
+        <a class="nav-link fw-bold text-light" href="films.html">Films</a>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-light" type="submit">Search</button>
@@ -54,7 +54,7 @@
     <div class="row justify-content-center">
       <h2 class="text-center">ACTUALITÉS</h2>
       <div class="col-lg-3">
-        <div class="card">
+        <div id="actualité" class="card">
           <div class="card-body">
             <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top"
               alt="Affiche-Cannes">
@@ -87,9 +87,9 @@
   <div class="container-fluid">
     <div class="row border border-dark justify-content-evenly">
       <div class="col-lg-3">
-        <div class="card">
+        <div id="offres" class="card">
           <div class="card-body text-center">
-            <img src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
+            <img  src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
             <h5 class="card-title">Printemps du Cinéma</h5>
             <p class="card-text">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
           </div>
