peaufinage footer etc

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   -----------------------------------------------------------------------------
 ------------------------------------------------------------------------------ -->
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark navbar-dark text-light">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,14 +52,15 @@
   </nav>
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <h2 class="text-center">ACTUALITÉS</h2>
+      <h2 class="text-center text-light m-2 p-2 bleu">ACTUALITÉS</h2>
       <div class="col-lg-3">
         <div id="actualité" class="card">
-          <div class="card-body">
+          <div class="card-body text-center">
             <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top"
               alt="Affiche-Cannes">
-            <h5 class="card-title">Printemps du Cinéma</h5>
-            <p class="card-text">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
+            <h5 class="card-title">75ème édition du festival de Cannes</h5>
+            <p class="card-text">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de Cannes.<br>Abonnez-vous à
+              la newsletter ci-dessous pour être tenu informé.</p>
           </div>
         </div>
       </div>
@@ -71,12 +72,12 @@
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- -->
 
-  <div class="container-fluid p-4 bg-primary">
+  <div class="container-fluid mb-3 p-4 bleu">
     <div class="row justify-content-center">
       <div class="col-lg-4">
         <h2 class="text-light text-center">NEWSLETTER</h2>
         <form class="d-flex">
-          
+
           <input class="form-control m-2 ps-2" type="mail" placeholder="E-mail" aria-label="Search">
           <button class="btn btn-outline-light m-2" type="submit">Envoyer</button>
         </form>
@@ -84,14 +85,14 @@
     </div>
   </div>
 
-  <div class="container-fluid">
-    <div class="row border border-dark justify-content-evenly">
+  <div class="container-fluid mt-3">
+    <div class="row justify-content-evenly">
       <div class="col-lg-3">
         <div id="offres" class="card">
           <div class="card-body text-center">
-            <img  src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
+            <img src="assets/img/printemps.jpg" class="card-img-top size" alt="Printemps-du-cinéma">
             <h5 class="card-title">Printemps du Cinéma</h5>
-            <p class="card-text">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
+            <p class="card-text mx-2">Du Dimanche 20 Mars au Mardi 22 Mars inclus, profitez d'un tarif à 4€ la séance.</p>
           </div>
         </div>
       </div>
@@ -100,14 +101,12 @@
           <div class="card-body text-center">
             <img src="assets/img/cinéchèque.jpg" class="card-img-top size" alt="cinéchèque">
             <h5 class="card-title">Cinéchèque</h5>
-            <p class="card-text">Grâce au Cinéchèque, votre place valable dans tous les cinémas de France est à 8,50€
-              seulement.</p>
+            <p class="card-text mx-2">Grâce au Cinéchèque, votre place valable dans tous les cinémas de France est à 8,50€.
+            </p>
           </div>
         </div>
       </div>
     </div>
-
-
   </div>
   </div>
 
@@ -115,13 +114,13 @@
   <footer>
     <div class="container-fluid bg-dark">
       <div class="row border-dark">
-        <div class="col-lg-6 d-flex justify-content-evenly">
-          <span class="text-light "><u>Nous Contacter</u></span>
-          <span class="text-light "><u>Protection des données</u></span>
-          <span class="text-light "><u>Mentions Légales</u></span>
-          <span class="text-light "><u>Conditions d'Utilisation</u></span>
+        <div class="col-lg-9 d-flex justify-content-between text-center">
+          <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
+          <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
+          <span class="text-light p-2 footer m-1"><u>Mentions Légales</u></span>
+          <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
         </div>
-        <div class="col-lg-6 d-flex justify-content-end p-2">
+        <div class="col-lg-3 d-flex justify-content-end">
           <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
           <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
           <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
