1er page scrolling horizontal

--- a/films.html
+++ b/films.html
@@ -38,7 +38,7 @@
                 id="navbarSupportedContent">
 
                 <a class="nav-link active text-light fw-bold" aria-current="page" href="index.html">Actualités</a>
-                <a class="nav-link fw-bold text-light" href="#offre">Offres</a>
+                <a class="nav-link fw-bold text-light" href="">Offres</a>
                 <a class="nav-link fw-bold text-light" href="films.html">Films</a>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
