--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <!-- overlay -->
                       <div class="overlay">
                           <!-- buy-btn -->M
-                          <a href="#" class="buy-btn">Read More</a>
+                          <a href="#" class="buy-btn">Plus d'infos</a>
                       </div>
                   </div>
                   <!-- detail-box -->
@@ -93,7 +93,7 @@
                       <!-- overlay -->
                       <div class="overlay">
                           <!-- buy-btn -->
-                          <a href="#" class="buy-btn">Buy Now</a>
+                          <a href="#" class="buy-btn">Plus d'infos</a>
                       </div>
                   </div>
                   <!-- detail-box -->
@@ -148,7 +148,7 @@
                   <div class="detail-box">
                       <!-- type -->
                       <div class="type">
-                          <a class="contesduhasard" href="#">contes-du-hasard</a>
+                          <a class="contesduhasard" href="#">Contes du Hasard</a>
                           <span>Date de sortie:</span>
                           <div>6 avril 2022</div>
                       
