--- a/films.html
+++ b/films.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="./assets/bobine.png">
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 
@@ -47,6 +50,333 @@
             </div>
         </div>
     </nav>
+
+
+    <div class="row m-0 p-0">
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly">
+            <div class="card affiche" style="width: 20rem;">
+                <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top"
+                    alt="autant-en-emporte-le-vent">
+                <div class="card-body">
+                    <h5 class="card-title">Autant En Emporte Le Vent</h5>
+                    <p class="card-text">
+                        Date de Sortie: 20 mai 1950 (France)</p>
+                    <!-- Button trigger modal -->
+                    <div class="row justify-content-center">
+                        <div class="col-4 p-2">
+                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Synosis
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Autant En Emporte Le Vent</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>En Georgie, en 1861, Scarlett O'Hara est une jeune femme fière et volontaire de la
+                                    haute
+                                    société sudiste. Courtisée par tous les bons partis du pays, elle n'a d'yeux que
+                                    pour Ashley
+                                    Wilkes malgré ses fiançailles avec sa douce et timide cousine, Melanie Hamilton.
+                                    Scarlett
+                                    est pourtant bien décidée à le faire changer d'avis, mais à la réception des Douze
+                                    Chênes
+                                    c'est du cynique Rhett Butler qu'elle retient l'attention...</p>
+
+                            </div>
+                            <div class="video">
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/z6HU1MO0qsk"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn-fermer btn btn-danger" data-bs-dismiss="modal"
+                                    aria-label="fermer">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly">
+            <div class="card affiche" style="width: 20rem;">
+                <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top"
+                    alt="autant-en-emporte-le-vent">
+                <div class="card-body">
+                    <h5 class="card-title">Autant En Emporte Le Vent</h5>
+                    <p class="card-text">
+                        Date de Sortie: 20 mai 1950 (France)</p>
+                    <!-- Button trigger modal -->
+                    <div class="row justify-content-center">
+                        <div class="col-4
+                p-2">
+                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Synosis
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Autant En Emporte Le Vent</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>En Georgie, en 1861, Scarlett O'Hara est une jeune femme fière et volontaire de la
+                                    haute
+                                    société sudiste. Courtisée par tous les bons partis du pays, elle n'a d'yeux que
+                                    pour Ashley
+                                    Wilkes malgré ses fiançailles avec sa douce et timide cousine, Melanie Hamilton.
+                                    Scarlett
+                                    est pourtant bien décidée à le faire changer d'avis, mais à la réception des Douze
+                                    Chênes
+                                    c'est du cynique Rhett Butler qu'elle retient l'attention...</p>
+
+                            </div>
+                            <div class="video">
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/z6HU1MO0qsk"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn-fermer btn btn-danger" data-bs-dismiss="modal"
+                                    aria-label="fermer">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly">
+            <div class="card affiche" style="width: 20rem;">
+                <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top"
+                    alt="autant-en-emporte-le-vent">
+                <div class="card-body">
+                    <h5 class="card-title">Autant En Emporte Le Vent</h5>
+                    <p class="card-text">
+                        Date de Sortie: 20 mai 1950 (France)</p>
+                    <!-- Button trigger modal -->
+                    <div class="row justify-content-center">
+                        <div class="col-4
+                p-2">
+                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Synosis
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Autant En Emporte Le Vent</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>En Georgie, en 1861, Scarlett O'Hara est une jeune femme fière et volontaire de la
+                                    haute
+                                    société sudiste. Courtisée par tous les bons partis du pays, elle n'a d'yeux que
+                                    pour Ashley
+                                    Wilkes malgré ses fiançailles avec sa douce et timide cousine, Melanie Hamilton.
+                                    Scarlett
+                                    est pourtant bien décidée à le faire changer d'avis, mais à la réception des Douze
+                                    Chênes
+                                    c'est du cynique Rhett Butler qu'elle retient l'attention...</p>
+
+                            </div>
+                            <div class="video">
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/z6HU1MO0qsk"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn-fermer btn btn-danger" data-bs-dismiss="modal"
+                                    aria-label="fermer">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly">
+            <div class="card affiche" style="width: 20rem;">
+                <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top"
+                    alt="autant-en-emporte-le-vent">
+                <div class="card-body">
+                    <h5 class="card-title">Autant En Emporte Le Vent</h5>
+                    <p class="card-text">
+                        Date de Sortie: 20 mai 1950 (France)</p>
+                    <!-- Button trigger modal -->
+                    <div class="row justify-content-center">
+                        <div class="col-4
+                p-2">
+                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Synosis
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Autant En Emporte Le Vent</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>En Georgie, en 1861, Scarlett O'Hara est une jeune femme fière et volontaire de la
+                                    haute
+                                    société sudiste. Courtisée par tous les bons partis du pays, elle n'a d'yeux que
+                                    pour Ashley
+                                    Wilkes malgré ses fiançailles avec sa douce et timide cousine, Melanie Hamilton.
+                                    Scarlett
+                                    est pourtant bien décidée à le faire changer d'avis, mais à la réception des Douze
+                                    Chênes
+                                    c'est du cynique Rhett Butler qu'elle retient l'attention...</p>
+
+                            </div>
+                            <div class="video">
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/z6HU1MO0qsk"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn-fermer btn btn-danger" data-bs-dismiss="modal"
+                                    aria-label="fermer">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-12 d-flex justify-content-center">
+            <div class="card affiche" style="width: 20rem;">
+                <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top"
+                    alt="autant-en-emporte-le-vent">
+                <div class="card-body">
+                    <h5 class="card-title">Autant En Emporte Le Vent</h5>
+                    <p class="card-text">
+                        Date de Sortie: 20 mai 1950 (France)</p>
+                    <!-- Button trigger modal -->
+                    <div class="row justify-content-center">
+                        <div class="col-4
+                p-2">
+                            <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                Synosis
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-scrollable">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Autant En Emporte Le Vent</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>En Georgie, en 1861, Scarlett O'Hara est une jeune femme fière et volontaire de la
+                                    haute
+                                    société sudiste. Courtisée par tous les bons partis du pays, elle n'a d'yeux que
+                                    pour Ashley
+                                    Wilkes malgré ses fiançailles avec sa douce et timide cousine, Melanie Hamilton.
+                                    Scarlett
+                                    est pourtant bien décidée à le faire changer d'avis, mais à la réception des Douze
+                                    Chênes
+                                    c'est du cynique Rhett Butler qu'elle retient l'attention...</p>
+
+                            </div>
+                            <div class="video">
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/z6HU1MO0qsk"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
+
+                            <div class="modal-footer">
+                                <button type="button" class="btn-fermer btn btn-danger" data-bs-dismiss="modal"
+                                    aria-label="fermer">Fermer</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
