--- a/films.html
+++ b/films.html
@@ -63,7 +63,7 @@
     <div class=" container2">
 
         <div class="card carte affiche " style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/affiche-autant-en-emporte-le-vent.png" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -121,7 +121,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/fight_club.jpg" class="card-img-top affichefight" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/fight_club.jpg" class="card-img-top dvd" alt="Fight_Club">
             <div class="card-body">
                 <h5 class="card-title">Fight Club</h5>
                 <p class="card-text">
@@ -177,7 +177,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/gonegirl.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/gonegirl.jpg" class="card-img-top dvd" alt="Gone_Girl">
             <div class="card-body">
                 <h5 class="card-title">Gone Girl</h5>
                 <p class="card-text">
@@ -232,7 +232,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/grantorino.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/grantorino.jpg" class="card-img-top dvd" alt="Gran_Torino">
             <div class="card-body">
                 <h5 class="card-title">Gran Torino</h5>
                 <p class="card-text">
@@ -287,7 +287,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/outofafrica.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/outofafrica.jpg" class=" dvd" alt="Out_Of_Africa">
             <div class="card-body">
                 <h5 class="card-title">Out Of Africa</h5>
                 <p class="card-text">
@@ -354,7 +354,7 @@
     <div class=" container2">
       
         <div class="card carte affiche " style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -414,7 +414,7 @@
 
         
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -473,7 +473,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class=" dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -531,7 +531,7 @@
         </div>
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -589,7 +589,7 @@
         </div>
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -667,7 +667,7 @@
 
     <div class=" container2">
         <div class="card carte affiche " style="width: 18rem;">
-            <img src="./assets/img/affiche-film-country-for-old-men-140.jpg" class="card-img-top"
+            <img src="./assets/img/affiche-film-country-for-old-men-140.jpg" class="card-img-top dvd"
                 alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">No Country For Old Men</h5>
@@ -724,7 +724,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/fellowship.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/fellowship.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Le Seigneur des Anneaux</h5>
                 <p class="card-text">
@@ -779,7 +779,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/marsatta.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/marsatta.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">MARS ATTACK</h5>
                 <p class="card-text">
@@ -834,7 +834,7 @@
 
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/ET.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/ET.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">E.T L'Extraterrestre</h5>
                 <p class="card-text">
@@ -891,7 +891,7 @@
 
         <!-- <div class="col-lg-3 col-sm-12 d-flex justify-content-evenly"> -->
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/citizen.jpg" class="card-img-top" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/citizen.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Citizen Kane</h5>
                 <p class="card-text">
