--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
   <div>
-    <h2 class="text-center text-light m-2 p-2 bleu">À LA UNE</h2>
+    <h2 class="text-center text-light my-5 p-4 bleu">À LA UNE</h2>
 
     </div>
     <div class="main">
@@ -168,14 +168,14 @@
 
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <h2 class="text-center text-light m-2 p-2 bleu">ACTUALITÉS</h2>
-      <div class="col-lg-3">
+      <h2 class="text-center text-light m-4 p-4 bleu">ACTUALITÉS</h2>
+      <div class="col-lg-3 mt-5 mb-3">
         <div id="actualité" class="card">
           <div class="card-body text-center">
-            <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top"
+            <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top dvd"
               alt="Affiche-Cannes">
             <h5 class="card-title">75ème édition du festival de Cannes</h5>
-            <p class="card-text">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de Cannes.<br>Abonnez-vous à
+            <p class="card-text cannes p-2">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de Cannes.<br>Abonnez-vous à
               la newsletter ci-dessous pour être tenu informé.</p>
           </div>
         </div>
@@ -187,7 +187,7 @@
 ---------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------- -->
 
-  <div class="container-fluid mb-3 p-4 bleu">
+  <div class="container-fluid my-5 p-4 bleu">
     <div class="row justify-content-center">
       <div class="col-lg-4">
         <h2 class="text-light text-center">NEWSLETTER</h2>
@@ -200,6 +200,7 @@
     </div>
   </div>
 
+  <h2 class="text-center fw-bold my-5 text-decoration-underline fst-italic">Offres du moment: </h2>
   <div class="container-fluid mt-3">
     <div class="row justify-content-evenly">
       <div class="col-lg-3">
@@ -216,7 +217,7 @@
           <div class="card-body text-center">
             <img src="assets/img/cinéchèque.jpg" class="card-img-top size" alt="cinéchèque">
             <h5 class="card-title">Cinéchèque</h5>
-            <p class="card-text mx-2">Grâce au Cinéchèque, votre place valable dans tous les cinémas de France est à 8,50€.
+            <p class="card-text mx-2">Une place valable dans tous les cinémas de France au tarif de 8,50€.
             </p>
           </div>
         </div>
@@ -228,7 +229,7 @@
 
   <footer>
     <div class="container-fluid bg-dark">
-      <div class="row border-dark">
+      <div class="row border-dark mt-5">
         <div class="col-lg-9 d-flex justify-content-between text-center">
           <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
           <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
