--- a/films.html
+++ b/films.html
@@ -73,7 +73,7 @@
                     <div class="col-4 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#fightclub">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#gonegirl">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#grantorino">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#outofafrica">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -364,7 +364,7 @@
                     <div class="col-4 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -484,7 +484,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -542,7 +542,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -600,7 +600,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -645,8 +645,9 @@
         </div>
     </div>
 
-
-    <a href="films.html">Retour en haut de la page</a>
+<div class="row">
+    <a href="films.html" class="fw-bold border border-dark text-center">Retour en haut de la page</a>
+</div>
 
 
 
@@ -678,7 +679,7 @@
                     <div class="col-4 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#nocountry">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -735,7 +736,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#se">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -790,7 +791,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#mars">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -845,7 +846,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#et">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -902,7 +903,7 @@
                 p-2">
                         <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
                             data-bs-target="#citizen">
-                            Synosis
+                            Synopsis
                         </button>
                     </div>
                 </div>
@@ -945,7 +946,9 @@
 
 
 
-    <a href="films.html">Retour en haut de la page</a>
+    <div class="row">
+        <a href="films.html" class="fw-bold border border-dark text-center">Retour en haut de la page</a>
+    </div>
 
 
 
