je passe la main

--- a/films.html
+++ b/films.html
@@ -56,14 +56,15 @@
     </nav>
 
     <div>
-        <h2 class="text-center text-light m-2 p-2 bleu">Par Ordre Aphabétique</h2>
+        <h2 class="text-center text-light my-5 p-4 bleu">Par Ordre Aphabétique</h2>
 
     </div>
     <!--------------------------- @@@@  Affiche de films----------------------------- -->
     <div class=" container2">
 
         <div class="card carte affiche " style="width: 18rem;">
-            <img src="./assets/img/affiche-autant-en-emporte-le-vent.png" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/affiche-autant-en-emporte-le-vent.png" class="card-img-top dvd"
+                alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -343,18 +344,19 @@
 
 
 
-<!-- -------------@@@@@---Affiche par Genre---@@@@@--------------------------------------- -->
+    <!-- -------------@@@@@---Affiche par Genre---@@@@@--------------------------------------- -->
 
 
 
     <div>
-        <h2 class="text-center text-light m-2 p-2 bleu">Par Genre</h2>
+        <h2 class="text-center text-light my-5 p-4 bleu">Par Genre</h2>
     </div>
 
     <div class=" container2">
-      
+
         <div class="card carte affiche " style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd"
+                alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -412,9 +414,10 @@
 
 
 
-        
+
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd"
+                alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -531,7 +534,8 @@
         </div>
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd"
+                alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -589,7 +593,8 @@
         </div>
 
         <div class="card carte affiche" style="width: 18rem;">
-            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd" alt="autant-en-emporte-le-vent">
+            <img src="./assets/img/autant-en-emporte-le-vent.jpg" class="card-img-top dvd"
+                alt="autant-en-emporte-le-vent">
             <div class="card-body">
                 <h5 class="card-title">Autant En Emporte Le Vent</h5>
                 <p class="card-text">
@@ -645,9 +650,9 @@
         </div>
     </div>
 
-<div class="row">
-    <a href="films.html" class="fw-bold border border-dark text-center">Retour en haut de la page</a>
-</div>
+    <div class="row my-3">
+        <a href="films.html" class="fw-bold text-center">Retour en haut de la page</a>
+    </div>
 
 
 
@@ -662,7 +667,7 @@
 
 
     <div>
-        <h2 class="text-center text-light m-2 p-2 bleu">Par Date de Sortie</h2>
+        <h2 class="text-center text-light my-5 p-4 bleu">Par Date de Sortie</h2>
 
     </div>
 
@@ -946,8 +951,8 @@
 
 
 
-    <div class="row">
-        <a href="films.html" class="fw-bold border border-dark text-center">Retour en haut de la page</a>
+    <div class="row mt-3">
+        <a href="films.html" class="fw-bold text-center">Retour en haut de la page</a>
     </div>
 
 
@@ -958,7 +963,7 @@
 
     <footer>
         <div class="container-fluid bg-dark">
-            <div class="row border-dark">
+            <div class="row border-dark mt-5 p-3">
                 <div class="col-lg-9 d-flex justify-content-between text-center">
                     <span class="text-light p-2 footer m-1"><u>Nous Contacter</u></span>
                     <span class="text-light p-2 footer m-1"><u>Protection des données</u></span>
