--- a/films.html
+++ b/films.html
@@ -36,7 +36,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark text-light">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                 id="navbarSupportedContent">
 
                 <a class="nav-link active text-light fw-bold" aria-current="page" href="index.html">Actualités</a>
-                <a class="nav-link fw-bold text-light" href="films.html">Offres</a>
+                <a class="nav-link fw-bold text-light" href="index.html">Offres</a>
                 <a class="nav-link fw-bold text-light" href="films.html">Films</a>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -457,7 +457,7 @@
         </div>
     </div>
 
-    <h3 class="fw-bolder d-flex justify-content-center m-5 p-3 fs-5">HISTORIQUE</h3>
+    <h3 class="fw-bolder d-flex justify-content-center m-5 p-4 fs-5">HISTORIQUE</h3>
 
     <div class="row m-0 p-0">
         <div class="col-lg-6 col-sm-12 d-flex justify-content-evenly m-0 p-0">
