--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->M
-              <a href="#" class="buy-btn">Plus d'infos</a>
+              <a href="secret.html" class="buy-btn">Plus d'infos</a>
             </div>
           </div>
           <!-- detail-box -->
@@ -93,7 +93,7 @@
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
-              <a href="#" class="buy-btn">Plus d'infos</a>
+              <a href="sonic.html" class="buy-btn">Plus d'infos</a>
             </div>
           </div>
           <!-- detail-box -->
@@ -119,7 +119,7 @@
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
-              <a href="#" class="buy-btn">Plus d'infos</a>
+              <a href="encanto.html" class="buy-btn">Plus d'infos</a>
             </div>
           </div>
           <!-- detail-box -->
@@ -141,7 +141,7 @@
             <!-- overlay -->
             <div class="overlay">
               <!-- buy-btn -->
-              <a href="#" class="buy-btn">Plus d'infos</a>
+              <a href="contes.html" class="buy-btn">Plus d'infos</a>
             </div>
           </div>
           <!-- detail-box -->
@@ -228,7 +228,7 @@
   </div>
   </div>
 
-  <div class="row my-3">
+  <div class="row my-3 p-0 m-0">
     <a href="index.html" class="fw-bold text-center transition">Retour en haut de la page</a>
   </div>
 
