--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
           <div class="card-body text-center">
             <img src="assets/img/affiche-festival-cannes-2022-truman-show.jpeg" class="card-img-top dvd"
               alt="Affiche-Cannes">
-            <h5 class="card-title">75ème édition du festival de Cannes</h5>
-            <p class="card-text cannes p-2">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de
+            <h5 class="card-title mx-3">75ème édition du festival de Cannes</h5>
+            <p class="card-text cannes mx-4 p-2">Du 17 au 28 Mai inclus aura lieu la 75ème édition du Festival de
               Cannes.<br>Abonnez-vous à
               la newsletter ci-dessous pour être tenu informé.</p>
           </div>
