--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
           <span class="text-light p-2 footer m-1"><u>Conditions d'Utilisation</u></span>
         </div>
         <div class="col-lg-3 d-flex justify-content-end">
-          <img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter">
-          <img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok">
+          <a href="https://twitter.com/allocine"><img src="assets/img/twitter.png" class="imgSize m-2" alt="twitter"></a>
+          <a href="https://www.tiktok.com/"><img src="assets/img/tiktok.png" class="imgSize m-2" alt="tiktok"></a>
           <img src="assets/img/insta.png" class="imgSize m-2" alt="insta">
           <img src="assets/img/facebook.png" class="imgSize m-2" alt="facebook">
         </div>
