--- a/contes.html
+++ b/contes.html
@@ -43,7 +43,7 @@
 
 
     <div class="row m-0 p-0">
-        <div class="col text-center m-5 text-primary">
+        <div class="col text-center m-5 text-primary ombreh2">
             <h2>Les Contes du Hasard</h2>
         </div>
     </div>
