--- a/encanto.html
+++ b/encanto.html
@@ -43,7 +43,7 @@
 
 
     <div class="row m-0 p-0">
-        <div class="col text-center m-5 text-primary">
+        <div class="col text-center m-5 text-primary ombreh2">
             <h2>Encanto</h2>
         </div>
     </div>
