--- a/secret.html
+++ b/secret.html
@@ -44,7 +44,7 @@
 
 
     <div class="row m-0 p-0">
-        <div class="col text-center m-5 text-primary">
+        <div class="col text-center m-5 text-primary ombreh2">
             <h2>Les Secrets De Dumbledore</h2>
         </div>
     </div>
